# VoiceConvertionForAndroid

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/voiceconvertion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio_analysis_lib/: world_harvest_f0.cpp  world_harvest_f0.hpp
app/src/main/java/com/example/voiceconvertion/: AudioRecordSample.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/voiceconvertion/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
